<resources>
    <string name="app_name">Kitchen Reciepies</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="please_login_to_continue">Please login to continue</string>
    <string name="hint_email_address">Email address</string>
    <string name="btn_login">Login</string>
    <string name="kitchen_recipes">Kitchen Recipes</string>
    <string name="know_all_recipes">Know all recipes?</string>
    <string name="sign_up">Sign Up</string>
</resources>