<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_FFF"
    tools:context=".view.ui.login.LoginFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_285dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_login_banner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_25dp"
        android:layout_marginTop="@dimen/dimen_64dp"
        android:drawableStart="@drawable/ic_logo"
        android:drawablePadding="@dimen/dimen_15dp"
        android:text="@string/kitchen_recipes"
        android:textColor="@color/color_363837"
        android:textSize="@dimen/font_20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_25dp"
        android:layout_marginTop="@dimen/dimen_22dp"
        android:fontFamily="@font/nunito_regular"
        android:text="@string/please_login_to_continue"
        android:textColor="@color/color_606060"
        android:textSize="@dimen/font_14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView2" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_45dp"
        android:layout_marginStart="@dimen/dimen_25dp"
        android:layout_marginTop="@dimen/dimen_47dp"
        android:layout_marginEnd="@dimen/dimen_25dp"
        android:background="@drawable/bg_bottom_border_ccc"
        android:fontFamily="@font/nunito_regular"
        android:hint="@string/hint_email_address"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textColor="@color/color_030f09"
        android:textColorHint="@color/color_a8a8a8"
        android:textSize="@dimen/font_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:layout_marginEnd="@dimen/dimen_25dp"
        android:background="@drawable/bg_bottom_border_ccc"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="@color/color_030f09"
        android:textColorHint="@color/color_a8a8a8"
        android:textSize="@dimen/font_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50dp"
        android:layout_marginStart="@dimen/dimen_25dp"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:layout_marginEnd="@dimen/dimen_25dp"
        android:layout_marginBottom="@dimen/dimen_64dp"
        android:background="@drawable/bg_corner_8_fill_30be76"
        android:fontFamily="@font/nunito_bold"
        android:gravity="center"
        android:text="@string/btn_login"
        android:textColor="@color/color_FFF"
        android:textSize="@dimen/font_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:fontFamily="@font/nunito_regular"
        android:text="@string/know_all_recipes"
        app:layout_constraintBaseline_toBaselineOf="@id/login_sign_up"
        android:textColor="@color/color_a8a8a8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/login_sign_up"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:fontFamily="@font/nunito_bold"
        android:paddingHorizontal="@dimen/dimen_15dp"
        android:text="@string/sign_up"
        android:textColor="@color/color_30be76"
        android:textSize="@dimen/font_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/appCompatTextView2"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>